[project]
name = "xray-access-log-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geoip2>=5.1.0",
    "ipaddress>=1.0.23",
    "load-dotenv>=0.1.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "requests>=2.32.3",
]
